# first_line

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: container.py  main.py
app/api/: routes.py
app/core/: schemas.py
app/llm/client/: google_gemini_client.py  llm_client.py  llm_client_factory.py
